fix galaxy overflow

--- a/src/components/galaxy.module.scss
+++ b/src/components/galaxy.module.scss
@@ -21,6 +21,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
 }
 
 .star {
